# modiste

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  conanfile.py
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/modiste/: modiste.hpp  queue.hpp
test/: CMakeLists.txt
test/proto/: default.proto
test/source/: modiste_test.cpp  queue_test.cpp
